# rono

./: .env.example  .gitignore  .pre-commit-config.yaml  ADAPTIVE_LEARN_ANALYSIS.md  CHANGELOG.md  HANDOFF_student_auth.md  Makefile  PHASES.md  PHASE_0_REPORT.md  PHASE_1_REPORT.md  PHASE_2_REPORT.md  README.md  RONO_EMPLOYMENT_EXAM_REPORT.html  RONO_EXAM_CONVERSION_PLAN.md  RONO_EXAM_TAXONOMY.md  RONO_HANDOFF.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 57748feedb2d_domain3_learning_engine.py  a7b8c9d0e1f2_seed_tus_global_topics.py  b2c3d4e5f6a7_hotpath_performance_indexes.py  c3d4e5f6a7b8_user_daily_target_prefs.py  d21dd58e384b_domain4_analytics_domain5_system_all_32_.py  d4e5f6a7b8c9_remove_tus_global_topics.py  de7db91cecd0_domain1_auth_identity.py  e48ce4433ba3_add_exam_type_to_items.py  e5f6a7b8c9d0_shared_stimulus.py  ecd8e501b03d_domain2_content.py  f1a2b3c4d5e6_exam_part_provenance_and_penalty.py
backend/scripts/: calibrate_items.py  import_questions.py  seed.py  seed_aptitude_topics.py  seed_estekhdami_topics.py  seed_provisional_difficulty.py  seed_tus_topics.py
backend/scripts/data/: estedad_phd_1404_engineering.json  estekhdami_constitution.json  estekhdami_general_starter.json  sample_estekhdami.json  tus_2013_spring_basic.json  tus_2013_spring_basic_b2.json  tus_2013_spring_basic_b3.json  tus_2013_spring_basic_b4.json  tus_2013_spring_basic_b5.json
backend/src/app/: main.py
backend/tests/: conftest.py
backend/tests/integration/: test_daily_review.py  (+4 more)
(+575 files in other folders)
