[project]
name = "adaptive-learn"
version = "0.1.0"
description = "Adaptive learning system using IRT + FSRS-5"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0",
    "redis>=5.0",
    "fsrs>=5.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "structlog>=23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "httpx>=0.25",
    "ruff>=0.1.8",
    "mypy>=1.7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/", "scripts/"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "F821",  # SQLAlchemy string-based forward refs in relationships — resolved at runtime by the mapper registry
    "B008",  # FastAPI Depends() / Query() in function signatures — this is the intended FastAPI DI pattern
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers"
